@@ -18,6 +18,7 @@ This version has not been released yet.
  * Fixed unnecessary conflict when deleting and creating a
    document in the same batch.
  * New and updated passwords are hashed using PBKDF2.
+ * Fix various bugs in the URL rewriter when recursion is involved.
 
 Version 1.2.1
 -------------
